tests/neg/lexer_bad_escape_in_char.baa
// RUN: expect-fail
// EXPECT: تسلسل هروب غير معروف داخل الحرف الحرفي

صحيح الرئيسية() {
    حرف ح = '\q'.
    إرجع ٠.
}
